@@ -1,3 +1,6 @@
+03/26/20
+  - Fixed routing to Micro800 controllers
+
 03/24/20
   - Added the ability to route packets through a CLX rack, upped to 0.6.4
 
